--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav id="anchors" class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav id="anchors" class="navbar navbar-expand-lg navbar-light bg-light box-sh">
         <a href="#/" id="home-href">HOME</a>
         <a href="#/authors" id="authors-href">AUTHORS</a>
         <a href="#/films" id="films-href">FILMS</a>
@@ -24,6 +24,11 @@
         <a href="#/about" id="about-href">ABOUT</a>
     </nav>
     <div id="container"></div>
+    <div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+     </div>
 </body>
 
 </html>
