--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Weather App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script type="module" src="/js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <link rel="stylesheet" href="/css/stylesheet.css" />
     <link rel="icon" href="resources/favicon.svg">
 </head>
@@ -18,7 +21,7 @@
 <body>
     <nav id="anchors" class="navbar navbar-expand-lg navbar-light bg-light box-sh">
         <a href="#/" id="home-href">HOME</a>
-        <a href="#/authors" id="authors-href">AUTHORS</a>
+        <a href="#/cityforecast" id="cityforecast-href">CITY FORECAST</a>
         <a href="#/films" id="films-href">FILMS</a>
         <a href="#/map" id="map-href">MAP</a>
         <a href="#/about" id="about-href">ABOUT</a>
