changing the names from film to city

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav id="anchors" class="navbar navbar-expand-lg navbar-light bg-light box-sh">
         <a href="#/" id="home-href">HOME</a>
         <a href="#/cityforecast" id="cityforecast-href">CITY FORECAST</a>
-        <a href="#/films" id="films-href">FILMS</a>
+        <a href="#/city" id="city-href">CITY</a>
         <a href="#/map" id="map-href">MAP</a>
         <a href="#/about" id="about-href">ABOUT</a>
     </nav>
