--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <nav id="anchors" class="navbar navbar-expand-lg navbar-light bg-light box-sh">
         <a href="#/" id="home-href">HOME</a>
-        <a href="#/cityforecast" id="cityforecast-href">CITY FORECAST</a>
+        <a href="#/cityforecast" id="cityforecast-href">CITIES' FORECASTS</a>
         <a href="#/city" id="city-href">CITY</a>
         <a href="#/map" id="map-href">MAP</a>
         <a href="#/about" id="about-href">ABOUT</a>
